--- a/src/cc/isotopestudio/GUI/MainScreen.form
+++ b/src/cc/isotopestudio/GUI/MainScreen.form
@@ -53,7 +53,7 @@
                           </Group>
                           <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jButton3" pref="110" max="32767" attributes="0"/>
+                              <Component id="jButton3" max="32767" attributes="0"/>
                               <Component id="jButton4" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -64,7 +64,7 @@
                           <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="72" max="32767" attributes="0"/>
+                  <EmptySpace pref="80" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -135,7 +135,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Calculation"/>
+            <Property name="text" type="java.lang.String" value="Calculator"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
           <Events>
